# GryFlux

./: CMakeLists.txt  README.md  build.sh
cmake/: aarch64-toolchain.cmake
include/framework/: async_graph_processor.h  async_pipeline.h  context.h  data_consumer.h  data_object.h  data_packet.h  data_source.h  graph_template.h  node_base.h  resource_pool.h  task_scheduler.h  template_builder.h  thread_pool.h
include/framework/profiler/: graph_profiler.h  profiling.h  profiling_build_config.h
include/utils/: logger.h  noncopyable.h  threadsafe_queue.h
scripts/: build-aarch64.sh
src/app/: CMakeLists.txt
src/app/example/: CMakeLists.txt  README.md  example.cpp
src/app/example/consumer/: result_consumer.h
src/app/example/context/: AdderContext.h  MultiplierContext.h
src/app/example/nodes/: custom_nodes.h
src/app/example/nodes/BMulConst/: BMulConstNode.cpp  BMulConstNode.h
src/app/example/nodes/CSubConst/: CSubConstNode.cpp  CSubConstNode.h
src/app/example/nodes/DMulConst/: DMulConstNode.cpp  DMulConstNode.h
src/app/example/nodes/EDivConst/: EDivConstNode.cpp  EDivConstNode.h
src/app/example/nodes/FMulConst/: FMulConstNode.cpp  FMulConstNode.h
src/app/example/nodes/GAdd/: GAddNode.cpp  GAddNode.h
src/app/example/nodes/HAdd/: HAddNode.cpp  HAddNode.h
src/app/example/nodes/IAdd/: IAddNode.cpp  IAddNode.h
src/app/example/nodes/Input/: InputNode.cpp  InputNode.h
src/app/example/nodes/Output/: OutputNode.cpp  OutputNode.h
src/app/example/packet/: simple_data_packet.h
src/app/example/source/: simple_data_source.h
src/app/yolox_detection_310p/: CMakeLists.txt  detection.cpp
src/app/yolox_detection_310p/consumer/: result_consumer.h
src/app/yolox_detection_310p/context/: infercontext.cpp  infercontext.h
src/app/yolox_detection_310p/nodes/infer/: infer.cpp  infer.h
src/app/yolox_detection_310p/nodes/postprocess/: postprocess.cpp  postprocess.h
src/app/yolox_detection_310p/nodes/preprocess/: preprocess.cpp  preprocess.h
src/app/yolox_detection_310p/packet/: detect_data_packet.h
src/app/yolox_detection_310p/source/: image_data_source.h
src/framework/: async_graph_processor.cpp  async_pipeline.cpp  data_packet.cpp  graph_profiler.cpp  graph_template.cpp  resource_pool.cpp  task_scheduler.cpp  template_builder.cpp  thread_pool.cpp
